# bwf-vid-benchmark

./: .gitignore  README.md  Taskfile.yml  bench.py  pyproject.toml  requirements.txt
src/: analyze_results.py  analyzer.py  bench.py  metrics.py  monitor.py  orchestrator.py  test_case.py  video_generator.py
tests/: conftest.py  test_analyze_results.py  test_analyzer.py  test_config_loader.py  test_generated_video.py  test_metrics.py  test_metrics_recoder.py  test_monitor.py  test_orchestrator.py  test_test_case.py  test_video_generator.py
